tooling/nargo_cli/tests/snapshots/execution_failure/brillig_assert_fail/execute__tests__brillig_assert_fail_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
bug: Input to Brillig function is in a separate subgraph to output
  ┌─ src/main.nr:6:26
  │
6 │     assert(1 == unsafe { conditional(x as bool) });
  │                          ---------------------- There is no path from the output of this Brillig call to either return values or inputs of the circuit, which creates an independent subgraph. This is quite likely a soundness vulnerability
  │
  = Call stack:
    1. src/main.nr:6:26

error: Failed to solve program: 'Failed to solve brillig function'
   ┌─ src/main.nr:10:12
   │
10 │     assert(x);
   │            -
   │
   = Call stack:
     1. src/main.nr:6:26
     2. src/main.nr:10:12

Failed to solve program: 'Failed to solve brillig function'
