tooling/nargo_cli/tests/snapshots/execution_failure/brillig_assert_fail/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Failed to solve program: 'Failed to solve brillig function'
   ┌─ src/main.nr:10:5
   │
10 │     assert(x);
   │     ---------
   │
   = Call stack:
     1: main
             at src/main.nr:6:26
     2: conditional
             at src/main.nr:10:5

Failed to solve program: 'Failed to solve brillig function'
