tooling/nargo_cli/tests/snapshots/execution_failure/brillig_assert_fail/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed
   ┌─ src/main.nr:10:12
   │
10 │     assert(x);
   │            -
   │
   = Call stack:
     1. src/main.nr:4:4
     2. src/main.nr:6:26

Error interpreting main function
